[tool.poetry]
name = "rzd-bot"
version = "0.1.0"
description = ""
authors = ["Ekaterina Dobrynina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.14.0"
python-dotenv = "^1.0.0"
aiohttp = {version = "3.9.1", platform = "win"}
sqlalchemy = "^2.0.23"
python-telegram-bot-calendar = "^1.0.5"
watchdog = "^3.0.0"
psutil = "^5.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
